[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/btree/Editor/sequence/sequence.gd" type="Script" id=1]

[node name="sequence" type="GraphNode"]
offset_right = 107.0
offset_bottom = 29.0
tooltip_text = "succeed when all child is succeed, failed otherwise"
title = "sequence"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0.129412, 0.0117647, 0.968627, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="slot0" type="HBoxContainer" parent="."]
offset_left = 16.0
offset_top = 24.0
offset_right = 91.0
offset_bottom = 44.0
alignment = 2

[node name="Add" type="Button" parent="slot0"]
offset_left = 34.0
offset_right = 54.0
offset_bottom = 20.0
text = "+"

[node name="Del" type="Button" parent="slot0"]
offset_left = 58.0
offset_right = 75.0
offset_bottom = 20.0
text = "-"
[connection signal="delete_request" from="." to="." method="_on_Sequence_close_request"]
[connection signal="resize_request" from="." to="." method="_on_Sequence_resize_request"]
[connection signal="pressed" from="slot0/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="slot0/Del" to="." method="_on_Del_pressed"]
